--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,8 @@
 :root {
-  --main-color: #ffffff;
+  --main-color: rgb(255, 255, 255);
 }
 
-
 /* @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap'); */
-
-
 
 body {
   width: 100%;
@@ -25,24 +22,23 @@ h1 {
 .main-container {
   font-family: 'Orbitron', sans-serif;
   /* Font size: 16 px add 2% of the viewport width */
-  font-size: calc(40px + 3vw);
-  color: --main-color;
+  font-size: calc(20px + 3vw);
+  color: var(--main-color);
   text-align: center;
   font-weight: 400;
 
-  width: 80%;
-  padding: 10px;
+  width: max-content;
+  padding: 30px;
   border-radius: 13px;
+  border: 7px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
 
-  background-color: #D9AFD9;
-  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
-  opacity: 90%;
+  background-image: linear-gradient( 358.4deg,  rgba(249,151,119,1) -2.1%, rgba(98,58,162,1) 90% );
+  opacity: 91%;
 
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  -webkit-box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 5px 5px 15px 5px rgba(0,0,0,0); 
-  box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 5px 5px 15px 5px rgba(0,0,0,0);
 }
