--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,3 +42,21 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+#mozarts-ghost {
+  position: fixed;
+  opacity: 1;
+  bottom: 0;
+  left: 10px;
+  padding: 10px;
+}
+
+#mozarts-ghost a:link,
+#mozarts-ghost a:visited {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+#mozarts-ghost a:hover {
+  color: rgb(89, 255, 0);
+}
