--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,7 @@
 body {
   width: 100%;
   
-  background-image: url("../images/bg.webp");
+  background-image: url("https://jsohndata.github.io/bluenight-in-seoul/src/images/bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
